--- a/stories.html
+++ b/stories.html
@@ -30,11 +30,11 @@
 						</div>
 					</div>
 
-					<div class="container-brush" id="grant">
-						<img src="img/brush-grant.png" alt="green brush stroke">
+					<div class="container-brush" id="andy">
+						<img src="img/brush-andy.png" alt="green brush stroke">
 						<div class="container-story-text">
 							<h4>02.</h4>
-							<h3>Grant</h3>
+							<h3>Andy</h3>
 						</div>
 					</div>
 
@@ -47,7 +47,7 @@
 					</div>
 
 					<a id="brush-link-vivian" class="brush-link" href="vivian.html"></a>
-					<a id="brush-link-grant" class="brush-link"></a>
+					<a id="brush-link-andy" class="brush-link"></a>
 					<a id="brush-link-ruiwen" class="brush-link"></a>
 				</div>
 			</section>
