--- a/vivian.html
+++ b/vivian.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/animation.css">
 	<link rel="stylesheet" href="css/vivian.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 </head>
 <body class="noscroll">
 	<div id="skrollr-body">
