final for week 10

--- a/andy.html
+++ b/andy.html
@@ -127,8 +127,8 @@
 						data-bottom-top="opacity: 0;"
 						data-center-top="opacity: 1;">
 					<h2 id="quote-invited"
-						data-bottom-top="opacity: 0; bottom: 0px;"
-						data-top-bottom="opacity: 1; bottom: 50px;">I know everyone in the school is invited to these events, but I never felt invited because it was like we were never part of the school to begin with anyways.</h2>
+						data-bottom-top="opacity: 0; bottom: -10px;"
+						data-top-bottom="opacity: 1; bottom: 40px;">I know everyone in the school is invited to these events, but I never felt invited because it was like we were never part of the school to begin with anyways.</h2>
 					<audio id="audio-andy-invited">
 						<source src="res/andy-quote-invited-eng.mp3" type="audio/mpeg">
 					</audio>
@@ -140,12 +140,7 @@
 				<div class="col-full">
 					<p
 						data-bottom-top="opacity: 0;"
-						data-center-top="opacity: 1;">One time, some Canadian students were selling lemonade in the hallways. He seemed really outgoing and confident and I admired that. It seemed like he talked to everyone who went by, laughing and having conversations with them.</p>
-
-					<p
-						data-bottom-top="opacity: 0;"
-						data-center-top="opacity: 1;"
-						>But when my friends and I walked past, he never approached us or bothered to include us.</p>
+						data-center-top="opacity: 1;">One time, some Canadian students were selling lemonade in the hallways. They all all seemed confident and were talking and laughing with each other. But when my friends and I walked past, he never approached us or bothered to include us.</p>
 
 					<img src="img/andy/lemonade.gif" class="lemonade"
 						data-bottom-top="opacity: 0;"
