adds responsiveness to home page, questions, and stories pages

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 	</head>
 	<body>
 		<header id="bg-index">
+			<nav id="container-home-nav">
+				<a id="home-link" href="index.html">they are your classmates</a>
+				<div id="container-mobile-links">
+					<a class="text-link" href="#">THANKS TO</a>
+					<a class="text-link" href="stories.html">VIEW STORIES</a>
+				</div>
+			</nav>
 			<div id="container-classroom-infographic">
 				<img id="infographic" src="img/index-infographic.png" alt="line isometric drawing of a classroom">
 				<img id="brush-stroke-1" src="img/index-infographic-brush1.png" alt="yellow brush stroke">
