--- a/stories.html
+++ b/stories.html
@@ -9,6 +9,13 @@
 	</head>
 	<body>
 		<section id="bg-stories">
+			<nav id="container-home-nav">
+				<a id="home-link" href="index.html">they are your classmates</a>
+				<div id="container-mobile-links">
+					<a class="text-link" href="#">THANKS TO</a>
+					<a class="text-link" href="stories.html">VIEW STORIES</a>
+				</div>
+			</nav>
 			<section id="stories-explanation">
 				<div id="container-stories-explanation-1">
 					<p class="para-fade" id="stories-para-fade-1">Thank you for sharing your thoughts on Chinese international students.</p>
@@ -25,7 +32,6 @@
 					<div class="container-brush">
 						<img src="img/brush-vivian.png" alt="yellow brush stroke">
 						<div class="container-story-text">
-							<h4>01.</h4>
 							<h3>Vivian</h3>
 						</div>
 					</div>
@@ -33,7 +39,6 @@
 					<div class="container-brush" id="andy">
 						<img src="img/brush-andy.png" alt="green brush stroke">
 						<div class="container-story-text">
-							<h4>02.</h4>
 							<h3>Andy</h3>
 						</div>
 					</div>
@@ -41,7 +46,6 @@
 					<div class="container-brush" id="ruiwen">
 						<img src="img/brush-ruiwen.png" alt="blue brush stroke">
 						<div class="container-story-text">
-							<h4>03.</h4>
 							<h3>Ruiwen</h3>
 						</div>
 					</div>
@@ -51,6 +55,8 @@
 					<a id="brush-link-ruiwen" class="brush-link"></a>
 				</div>
 			</section>
+			<a class="text-link" id="thanks-link" href="#">THANKS TO</a>
+			<a class="text-link" id="view-stories-link" href="stories.html">VIEW STORIES</a>
 		</section>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<script src="js/disable-click.js"></script>
