--- a/questions.html
+++ b/questions.html
@@ -9,6 +9,13 @@
 	</head>
 	<body>
     <section id="bg-questions">
+			<nav id="container-home-nav">
+				<a id="home-link" href="index.html">they are your classmates</a>
+				<div id="container-mobile-links">
+					<a class="text-link" href="#">THANKS TO</a>
+					<a class="text-link" href="stories.html">VIEW STORIES</a>
+				</div>
+			</nav>
       <section id="container-questions">
         <div id="container-questions-explanation">
           <p class="para-fade" id="questions-para-fade-1">We will now ask you five questions about your thoughts on Chinese international students.</p>
@@ -68,6 +75,8 @@
         </div>
 
       </section>
+			<a class="text-link" id="thanks-link" href="#">THANKS TO</a>
+			<a class="text-link" id="view-stories-link" href="stories.html">VIEW STORIES</a>
     </section>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="js/questions.js"></script>
