adds logic to for accessing question 4 part 2 and adds more media queries for height

--- a/stories.html
+++ b/stories.html
@@ -51,7 +51,7 @@
 					</div>
 
 					<a id="brush-link-vivian" class="brush-link" href="vivian.html"></a>
-					<a id="brush-link-andy" class="brush-link"></a>
+					<a id="brush-link-andy" class="brush-link" href="andy.html"></a>
 					<a id="brush-link-ruiwen" class="brush-link"></a>
 				</div>
 			</section>
