makes fixes after user feedback, including next button to skip fadeys

--- a/andy.html
+++ b/andy.html
@@ -5,13 +5,14 @@
 	<link rel="stylesheet" href="css/animation.css">
 	<link rel="stylesheet" href="css/andy.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=no">
+	<meta charset="utf-8">
 </head>
 <body class="noscroll">
 	<div id="skrollr-body">
 
 		<div class="language-panel">
 			<div class="language-panel-caller">
-				<img src="img/sound.png" alt="microphone icon">
+				<img src="img/switch-language2.png" alt="switch language icon">
 			</div>
 			<div class="language-options">
 				<button id="eng">ENG</button>
@@ -63,7 +64,7 @@
 					<p
 						data-bottom-top="opacity: 0;"
 						data-center-top="opacity: 1;">
-						I knew Canada was multicultural and I imagined high school to have people of cultures laughing together while walking down the hallways. I wanted to meet people from all over the world and maybe get to visit their countries and sleep on their couches.</p>
+						I knew Canada was multicultural and I imagined high school to have people of different cultures laughing together while walking down the hallways. I wanted to meet people from all over the world and maybe get to visit their home countries with them.</p>
 				</div>
 			</section>
 
@@ -79,7 +80,7 @@
 						data-center-top="opacity: 1;">
 					<p
 						data-bottom-top="opacity: 0;"
-						data-center-top="opacity: 1;">This wasn’t the reality, though. When I started high school, a month after moving here, I noticed that Canadian students never talked to me unless they needed to. We didn’t really have a presence to them, it seemed.</p>
+						data-center-top="opacity: 1;">This wasn't the reality, though. When I started high school, a month after moving here, I noticed that Canadian students never talked to me unless they needed to. We didn't really have a presence to them, it seemed.</p>
 					<h2 id="quote-divide"
 						data-bottom-top="opacity: 0; top: 400px;"
 						data-top-bottom="opacity: 1; top: 300px;">There was a divide between Canadian students and International students.</h2>
@@ -122,7 +123,7 @@
 				<div class="col-full">
 					<p
 						data-bottom-top="opacity: 0;"
-						data-center-top="opacity: 1;">With every school spirit event like Pajama Day, no one in my group really understood what school spirit was. We never had these events back home and no one told us why these events happened. That’s why we didn’t take part in these events. </p>
+						data-center-top="opacity: 1;">With every school spirit event like Pajama Day, no one in my group really understood what school spirit was. We never had these events back home and no one told us why these events happened. That's why we didn’t take part in these events. </p>
 					<img src="img/andy/paint5.png" class="paint"
 						data-bottom-top="opacity: 0;"
 						data-center-top="opacity: 1;">
@@ -140,7 +141,7 @@
 				<div class="col-full">
 					<p
 						data-bottom-top="opacity: 0;"
-						data-center-top="opacity: 1;">One time, some Canadian students were selling lemonade in the hallways. They all all seemed confident and were talking and laughing with each other. But when my friends and I walked past, he never approached us or bothered to include us.</p>
+						data-center-top="opacity: 1;">After the very first day of school, some Canadian students in my class were laughing and talking to each other. When other classmates walked past, they said hi and asked them for their names. But when my friends and I walked past, they looked at us but didn't approach us or include us.</p>
 
 					<img src="img/andy/lemonade.gif" class="lemonade"
 						data-bottom-top="opacity: 0;"
@@ -176,6 +177,7 @@
 		<section class="row" id="assumptions">
 			<div class="col-left">
 				<h3>Andy's Experience</h3>
+				<h5>key takeaways</h5>
 				<ul>
 					<li id="assumptions-li-0">My dad sent me here to live by myself at 14 years old. I didn't want to leave my friends in Beijing.</li>
 					<li id="assumptions-li-2">I came to Canada because it is known for its multiculturalism and I believed it would be inclusive.</li>
@@ -183,6 +185,7 @@
 			</div>
 			<div class="col-right">
 				<h3>Your Perspective</h3>
+				<h5>sourced from the prior questions</h5>
 				<ul>
 					<li id="assumptions-li-1">They chose to come here to learn English, so they should speak it.</li>
 					<li id="assumptions-li-3">Canada is an English-speaking country, so they should be speaking English when they are at school.</li>
