--- a/questions.html
+++ b/questions.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/animation.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta charset="utf-8">
 		<title>They Are Your Classmates</title>
 	</head>
 	<body>
@@ -12,14 +13,17 @@
 			<nav id="container-home-nav">
 				<a id="home-link" href="index.html">they are your classmates</a>
 				<div id="container-mobile-links">
-					<a class="text-link" href="#">THANKS TO</a>
-					<a class="text-link" href="stories.html">VIEW STORIES</a>
+					<a class="text-link" href="#">ABOUT US</a>
+					<a class="text-link" href="#">THANK YOU</a>
 				</div>
 			</nav>
       <section id="container-questions">
         <div id="container-questions-explanation">
-          <p class="para-fade" id="questions-para-fade-1">We will now ask you five questions about your thoughts on Chinese international students.</p>
-          <p class="para-fade" id="questions-para-fade-2">Please share your true thoughts and answer the questions to the best of your ability.</p>
+					<div class="fade-in">
+	          <p class="para-fade">We will now ask you five questions about your thoughts on Chinese international students.</p>
+	          <p class="para-fade">Please share your true thoughts and answer the questions to the best of your ability.</p>
+						<button class="button-next">next ></button>
+					</div>
         </div>
 
         <div id="question-one" class="question">
@@ -41,21 +45,21 @@
           <h2>Q.3/5</h2>
           <p>How do you feel when Chinese ESL students stick together and speak their own language at school?</p>
           <button id="language-annoyed">Annoyed</button>
-          <button id="language-angry">Angry</button>
+          <button id="language-angry">Frustrated</button>
           <button id="language-dont-mind">I don't mind</button>
           <button id="language-no-opinion">No opinion</button>
         </div>
 
         <div id="question-four" class="question">
           <h2>Q.4/5</h2>
-          <p>If a Chinese ESL student asks to be your partner for a project, you...</p>
+          <p>If a Chinese ESL student asks to be your partner for a presentation, you...</p>
           <button id="accept">Accept and pair up with them</button>
           <button id="avoid">Avoid working with them / work by myself</button>
         </div>
 
         <div id="question-four-p2" class="question">
           <h2>Q.4/5 cont.</h2>
-          <p>If a Chinese ESL student asks to be your partner, you <span>placeholder</span>. Why?</p>
+          <p>If a Chinese ESL student asks to be your partner for a presentation, you <span>avoid working with them / work by yourself</span>. Why?</p>
           <button id="focus-work">I don't want to waste time on communication barriers</button>
           <button id="dont-contribute">They don't contribute enough</button>
           <div id="container-other-input">
@@ -75,8 +79,8 @@
         </div>
 
       </section>
-			<a class="text-link" id="thanks-link" href="#">THANKS TO</a>
-			<a class="text-link" id="view-stories-link" href="stories.html">VIEW STORIES</a>
+			<a class="text-link" id="about-link" href="#">ABOUT US</a>
+			<a class="text-link" id="thanks-link" href="stories.html">THANK YOU</a>
     </section>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="js/questions.js"></script>
