--- a/stories.html
+++ b/stories.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/animation.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta charset="utf-8">
 		<title>They Are Your Classmates</title>
 	</head>
 	<body>
@@ -12,30 +13,42 @@
 			<nav id="container-home-nav">
 				<a id="home-link" href="index.html">they are your classmates</a>
 				<div id="container-mobile-links">
-					<a class="text-link" href="#">THANKS TO</a>
-					<a class="text-link" href="stories.html">VIEW STORIES</a>
+					<a class="text-link" href="#">ABOUT US</a>
+					<a class="text-link" href="#">THANK YOU</a>
 				</div>
 			</nav>
 			<section id="stories-explanation">
 				<div id="container-stories-explanation-1">
-					<p class="para-fade" id="stories-para-fade-1">Thank you for sharing your thoughts on Chinese international students.</p>
-					<p class="para-fade" id="stories-para-fade-2">Have you ever wondered about their thoughts?</p>
+					<div class="fade-in">
+						<p class="para-fade" id="stories-para-fade-1">Thank you for sharing your thoughts on Chinese international students.</p>
+						<p class="para-fade" id="stories-para-fade-2">Have you ever wondered about their thoughts?</p>
+						<button class="button-next">next ></button>
+					</div>
 				</div>
-				<div id="container-stories-explanation-2">
-					<p class="para-fade" id="stories-para-fade-3">What is it like for them to attend a school in Canada, 8000 kilometres away from their home?</p>
-					<p class="para-fade" id="stories-para-fade-4">Let’s explore some of their personal stories, from their own perspectives.</p>
+				<div id="container-stories-explanation-2" class="not-initially-visible">
+					<div>
+						<p class="para-fade" id="stories-para-fade-3">What is it like for them to attend a school in Canada, 8000 kilometres away from their home?</p>
+						<button class="button-next">next ></button>
+					</div>
+				</div>
+				<div id="container-stories-explanation-3" class="not-initially-visible">
+					<div>
+						<p class="para-fade" id="stories-para-fade-4">Let’s explore some of their personal stories, from their own perspectives.</p>
+					</div>
 				</div>
 			</section>
 
 			<section id="story-selection">
-				<div id="container-brushes" id="vivian">
-					<div class="container-brush">
+				<div id="container-brushes">
+					<a id="brush-link-vivian" class="brush-link" href="vivian.html"></a>
+					<div class="container-brush" id="vivian">
 						<img src="img/brush-vivian.png" alt="yellow brush stroke">
 						<div class="container-story-text">
 							<h3>Vivian</h3>
 						</div>
 					</div>
 
+					<a id="brush-link-andy" class="brush-link" href="andy.html"></a>
 					<div class="container-brush" id="andy">
 						<img src="img/brush-andy.png" alt="green brush stroke">
 						<div class="container-story-text">
@@ -43,22 +56,19 @@
 						</div>
 					</div>
 
+					<a id="brush-link-ruiwen" class="brush-link"></a>
 					<div class="container-brush" id="ruiwen">
 						<img src="img/brush-ruiwen.png" alt="blue brush stroke">
 						<div class="container-story-text">
 							<h3>Ruiwen</h3>
 						</div>
 					</div>
-
-					<a id="brush-link-vivian" class="brush-link" href="vivian.html"></a>
-					<a id="brush-link-andy" class="brush-link" href="andy.html"></a>
-					<a id="brush-link-ruiwen" class="brush-link"></a>
 				</div>
 			</section>
-			<a class="text-link" id="thanks-link" href="#">THANKS TO</a>
-			<a class="text-link" id="view-stories-link" href="stories.html">VIEW STORIES</a>
+			<a class="text-link" id="about-link" href="#">ABOUT US</a>
+			<a class="text-link" id="thanks-link" href="stories.html">THANK YOU</a>
 		</section>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-		<script src="js/disable-click.js"></script>
+		<script src="js/fading-text.js"></script>
 	</body>
 </html>
