--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 		<title>They Are Your Classmates</title>
 	</head>
 	<body>
-		<header id="bg-index">
+		<section id="bg-index" class="background">
 			<nav id="container-home-nav">
 				<a id="home-link" href="index.html">they are your classmates</a>
 				<div id="container-mobile-links">
-					<a class="text-link" href="#">ABOUT US</a>
-					<a class="text-link" href="#">THANK YOU</a>
+					<a class="text-link" href="about-us.html">ABOUT US</a>
+					<a class="text-link" href="thank-you.html">THANK YOU</a>
 				</div>
 			</nav>
 			<div id="container-classroom-infographic">
@@ -35,9 +35,9 @@
 				<p class="para-fade">What are your thoughts on these Chinese international students?</p>
 				<a id="button-share-thoughts" class="button-default" href="questions.html">Share your thoughts</a>
 			</div>
-			<a class="text-link" id="about-link" href="#">ABOUT US</a>
-			<a class="text-link" id="thanks-link" href="stories.html">THANK YOU</a>
-		</header>
+			<a class="text-link" id="about-link" href="about-us.html">ABOUT US</a>
+			<a class="text-link" id="thanks-link" href="thank-you.html">THANK YOU</a>
+		</section>
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<script src="js/fading-text.js"></script>
