--- a/questions.html
+++ b/questions.html
@@ -9,12 +9,12 @@
 		<title>They Are Your Classmates</title>
 	</head>
 	<body>
-    <section id="bg-questions">
+    <section id="bg-questions" class="background">
 			<nav id="container-home-nav">
 				<a id="home-link" href="index.html">they are your classmates</a>
 				<div id="container-mobile-links">
 					<a class="text-link" href="#">ABOUT US</a>
-					<a class="text-link" href="#">THANK YOU</a>
+					<a class="text-link" href="thank-you.html">THANK YOU</a>
 				</div>
 			</nav>
       <section id="container-questions">
@@ -80,7 +80,7 @@
 
       </section>
 			<a class="text-link" id="about-link" href="#">ABOUT US</a>
-			<a class="text-link" id="thanks-link" href="stories.html">THANK YOU</a>
+			<a class="text-link" id="thanks-link" href="thank-you.html">THANK YOU</a>
     </section>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="js/questions.js"></script>
