--- a/questions.html
+++ b/questions.html
@@ -28,14 +28,14 @@
 
         <div id="question-one" class="question">
           <h2>Q.1/5</h2>
-          <p>Have you ever been in a class with Chinese ESL students?</p>
+          <p>Have you ever been in a class with Chinese international students?</p>
           <button id="yes">Yes</button>
           <button id="no">No</button>
         </div>
 
         <div id="question-two" class="question">
           <h2>Q.2/5</h2>
-          <p>What do you think is the main reason why Chinese ESL students come to Canada?</p>
+          <p>What do you think is the main reason why Chinese international students come to Canada?</p>
           <button id="learn-english">To learn English</button>
           <button id="better-education">Education is better here</button>
           <button id="better-life">To have a better life here</button>
@@ -43,7 +43,7 @@
 
         <div id="question-three" class="question">
           <h2>Q.3/5</h2>
-          <p>How do you feel when Chinese ESL students stick together and speak their own language at school?</p>
+          <p>How do you feel when Chinese international students stick together and speak their own language at school?</p>
           <button id="language-annoyed">Annoyed</button>
           <button id="language-angry">Frustrated</button>
           <button id="language-dont-mind">I don't mind</button>
@@ -52,14 +52,14 @@
 
         <div id="question-four" class="question">
           <h2>Q.4/5</h2>
-          <p>If a Chinese ESL student asks to be your partner for a presentation, you...</p>
+          <p>If a Chinese international student asks to be your partner for a presentation, you...</p>
           <button id="accept">Accept and pair up with them</button>
           <button id="avoid">Avoid working with them / work by myself</button>
         </div>
 
         <div id="question-four-p2" class="question">
           <h2>Q.4/5 cont.</h2>
-          <p>If a Chinese ESL student asks to be your partner for a presentation, you <span>avoid working with them / work by yourself</span>. Why?</p>
+          <p>If a Chinese international student asks to be your partner for a presentation, you <span>avoid working with them / work by yourself</span>. Why?</p>
           <button id="focus-work">I don't want to waste time on communication barriers</button>
           <button id="dont-contribute">They don't contribute enough</button>
           <div id="container-other-input">
@@ -71,7 +71,7 @@
 
         <div id="question-five" class="question">
           <h2>Q.5/5</h2>
-          <p>A Chinese ESL student is presenting in front of the class, but speaking very quietly. How do you feel?</p>
+          <p>A Chinese international student is presenting in front of the class, but speaking very quietly. How do you feel?</p>
           <button id="presenting-annoyed">Annoyed because I can't hear them</button>
           <button id="feel-bad">I feel bad for them because they're struggling</button>
           <button id="shouldnt-be-afraid">I think they shouldn't be afraid to speak up</button>
