--- a/stories.html
+++ b/stories.html
@@ -48,7 +48,7 @@
 						</div>
 					</div>
 
-					<a id="brush-link-andy" class="brush-link" href="andy.html"></a>
+					<a id="brush-link-andy" class="brush-link" href="andy.php"></a>
 					<div class="container-brush" id="andy">
 						<img src="img/brush-andy.png" alt="green brush stroke">
 						<div class="container-story-text">
