made infographic fade in brushes

--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
 			</nav>
 			<div id="container-classroom-infographic">
 				<img id="infographic" src="img/index-infographic.png" alt="line isometric drawing of a classroom">
-				<img id="brush-stroke-1" src="img/index-infographic-brush1.png" alt="yellow brush stroke">
-				<img id="brush-stroke-2" src="img/index-infographic-brush2.png" alt="yellow brush stroke">
-				<!-- <img id="brush-strokes" src="img/index-infographic-brushes.gif" alt="yellow brush strokes"> -->
+				<img id="brush-stroke-1" src="img/infographic-brush1.png" alt="yellow brush stroke">
+				<img id="brush-stroke-2" src="img/infographic-brush2.png" alt="yellow brush stroke">
 			</div>
 			<div id="index-container-fade-1" class="fade-in">
 				<p id="index-para-fade-1" class="para-fade">Between 2004 and 2015, the number of Chinese international students in Canada <strong>tripled</strong> from about 40,000 to 120,000 students.</p>
