Changes font, adds background image for vid

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<button class="button-next">next ></button>
 			</div>
 			<div id="index-container-fade-2" class="not-initially-visible">
-				<p id="index-para-fade-2" class="para-fade">Chinese international students have become a real, strong presence in our country. You’ve likely walked down the school hallways with them, lined up for cafeteria food alongside them, and had classes with them.</p>
+				<p id="index-para-fade-2" class="para-fade">Chinese international students have become a strong presence in our country. You’ve likely walked down the school hallways with them, lined up for cafeteria food alongside them, and had classes with them.</p>
 				<button class="button-next">next ></button>
 			</div>
 			<div id="index-container-fade-3" class="not-initially-visible">
