--- a/stories.html
+++ b/stories.html
@@ -42,7 +42,7 @@
 				<div id="container-brushes">
 					<a id="brush-link-vivian" class="brush-link" href="vivian.html"></a>
 					<div class="container-brush" id="vivian">
-						<img src="img/brush-vivian.png" alt="yellow brush stroke">
+						<img src="img/brush-vivian.svg" alt="yellow brush stroke">
 						<div class="container-story-text">
 							<h3>Vivian</h3>
 						</div>
@@ -50,7 +50,7 @@
 
 					<a id="brush-link-andy" class="brush-link" href="andy.php"></a>
 					<div class="container-brush" id="andy">
-						<img src="img/brush-andy.png" alt="green brush stroke">
+						<img src="img/brush-andy.svg" alt="green brush stroke">
 						<div class="container-story-text">
 							<h3>Andy</h3>
 						</div>
@@ -58,7 +58,7 @@
 
 					<a id="brush-link-ruiwen" class="brush-link"></a>
 					<div class="container-brush" id="ruiwen">
-						<img src="img/brush-ruiwen.png" alt="blue brush stroke">
+						<img src="img/brush-ruiwen.svg" alt="blue brush stroke">
 						<div class="container-story-text">
 							<h3>Ruiwen</h3>
 						</div>
