Fixes vertical responsiveness

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/animation.css">
+		<link rel="shortcut icon" type="image/png" href="favicon.png"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta charset="utf-8">
 		<title>They Are Your Classmates</title>
@@ -23,7 +24,7 @@
 				<img id="brush-stroke-2" src="img/infographic-brush2.png" alt="yellow brush stroke">
 			</div>
 			<div id="index-container-fade-1" class="fade-in">
-				<p id="index-para-fade-1" class="para-fade">Between 2004 and 2015, the number of Chinese international students in Canada <strong>tripled</strong> from about 40,000 to 120,000 students.</p>
+				<p id="index-para-fade-1" class="para-fade">Between 2004 and 2015, the number of Chinese international students in Canada <strong>tripled</strong> from about <strong>40,000</strong> to <strong>120,000</strong> students.</p>
 				<button class="button-next">next ></button>
 			</div>
 			<div id="index-container-fade-2" class="not-initially-visible">
