--- a/about-us.html
+++ b/about-us.html
@@ -7,6 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta charset="utf-8">
 		<title>They Are Your Classmates</title>
+		<link rel="shortcut icon" type="image/png" href="favicon.png"/>
 	</head>
 	<body>
 		<section id="bg-about-us" class="background">
