--- a/thank-you.html
+++ b/thank-you.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/animation.css">
+		<link rel="shortcut icon" type="image/png" href="favicon.png"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta charset="utf-8">
 		<title>They Are Your Classmates</title>
