--- a/stories.html
+++ b/stories.html
@@ -9,7 +9,7 @@
 		<meta charset="utf-8">
 		<title>They Are Your Classmates</title>
 	</head>
-	<body>
+	<body id="stories-page">
 		<section id="bg-stories" class="background">
 			<nav id="container-home-nav">
 				<a id="home-link" href="index.html">they are your classmates</a>
