--- a/questions.html
+++ b/questions.html
@@ -2,7 +2,6 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="css/question-buttons.css">
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/animation.css">
 		<link rel="shortcut icon" type="image/png" href="favicon.png"/>
@@ -67,7 +66,7 @@
           <div id="container-other-input">
             <label for="other">Other:</label>
             <input type="text" id="text-input">
-            <input type="submit" id="other-submit">
+            <input type="submit" id="other-submit" value="submit">
           </div>
         </div>
 
