--- a/about-us.html
+++ b/about-us.html
@@ -25,7 +25,7 @@
             Chinese international students experience. However, we have observed throughout our lives that there is a stigma towards
             Chinese international students within our society and a tendency for Canadian students to have prejudices and misconceptions about them.
             Truthfully, in grade school we also had many of these prejudices and misconceptions, despite being Chinese ourselves.
-            Our aim for this project was to understand why these misconceptions exist and connect to these students to understand their
+            Our aim for this project was to understand why these misconceptions exist and connect to Chinese International students to understand their
             perspectives better and perhaps reconsider our own views and opinions on them.</p>
 
           <p class="para-fade"><em>They Are Your Classmates</em> was our way of connecting with these students that we largely ignored in school.
