--- a/questions.html
+++ b/questions.html
@@ -49,16 +49,17 @@
 
         <div id="question-four" class="question">
           <h2>Q.4/5</h2>
-          <p>If a Chinese international student asks to be your partner for a presentation, you...</p>
+          <p>If a Chinese international student asks to be your partner for a social studies presentation, you...</p>
           <button id="accept">Accept and pair up with them</button>
-          <button id="avoid">Avoid working with them / work by myself</button>
+          <button id="avoid">Try finding someone else</button>
         </div>
 
         <div id="question-four-p2" class="question">
           <h2>Q.4/5 cont.</h2>
-          <p>If a Chinese international student asks to be your partner for a presentation, you <span>avoid working with them / work by yourself</span>. Why?</p>
+          <p>If a Chinese international student asks to be your partner for a presentation, you <span>try finding someone else</span>. Why?</p>
           <button id="focus-work">I don't want to waste time on communication barriers</button>
           <button id="dont-contribute">They don't contribute enough</button>
+					<button id="bad-grade">I don't want a bad grade</button>
           <div id="container-other-input">
             <label for="other">Other:</label>
             <input type="text" id="text-input">
