--- a/stories.html
+++ b/stories.html
@@ -21,20 +21,14 @@
 			<section id="stories-explanation">
 				<div id="container-stories-explanation-1">
 					<div class="fade-in">
-						<p class="para-fade" id="stories-para-fade-1">Thank you for sharing your thoughts on Chinese international students.</p>
-						<p class="para-fade" id="stories-para-fade-2">Have you ever wondered about their thoughts?</p>
+						<p class="para-fade" id="stories-para-fade-1">Thank you for sharing your thoughts on Chinese international students. Have you ever wondered about their thoughts?</p>
+						<p class="para-fade" id="stories-para-fade-2">What is it like for them to attend a school in Canada, 8000 kilometres away from their home?</p>
 						<button class="button-next">next ></button>
 					</div>
 				</div>
 				<div id="container-stories-explanation-2" class="not-initially-visible">
 					<div>
-						<p class="para-fade" id="stories-para-fade-3">What is it like for them to attend a school in Canada, 8000 kilometres away from their home?</p>
-						<button class="button-next">next ></button>
-					</div>
-				</div>
-				<div id="container-stories-explanation-3" class="not-initially-visible">
-					<div>
-						<p class="para-fade" id="stories-para-fade-4">Let’s explore some of their personal stories, from their own perspectives.</p>
+						<p class="para-fade" id="stories-para-fade-3">Let’s explore some of their personal stories, from their own perspectives.</p>
 					</div>
 				</div>
 			</section>
