--- a/thank-you.html
+++ b/thank-you.html
@@ -34,7 +34,7 @@
               If you were impacted by your classmates' stories, we hope that you might pass them on to others.</p>
             <div id="container-share-buttons">
               <a class="button-share" id="fb" href="https://www.facebook.com/sharer/sharer.php?u=theyareyourclassmates.ca" target="_blank">Share on Facebook</a>
-              <a class="button-share" id="twitter" href="https://twitter.com/share?url=http://www.theyareyourclassmates.ca" target="_blank">Share on Twitter</a>
+              <a class="button-share" id="twitter" href="https://twitter.com/share?url=http://www.theyareyourclassmates.ca&text=The%20Chinese%20international%20student%20experience%20in%20Canadian%20high%20schools" target="_blank">Share on Twitter</a>
             </div>
           </div>
         </div>
